; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_misc.c_ar5210ResetTsf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ath/ath_hal/ar5210/extr_ar5210_misc.c_ar5210ResetTsf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }

@AR_BEACON = common dso_local global i32 0, align 4
@AR_BEACON_RESET_TSF = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ar5210ResetTsf(%struct.ath_hal* %0) #0 {
  %2 = alloca %struct.ath_hal*, align 8
  %3 = alloca i32, align 4
  store %struct.ath_hal* %0, %struct.ath_hal** %2, align 8
  %4 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %5 = load i32, i32* @AR_BEACON, align 4
  %6 = call i32 @OS_REG_READ(%struct.ath_hal* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load %struct.ath_hal*, %struct.ath_hal** %2, align 8
  %8 = load i32, i32* @AR_BEACON, align 4
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @AR_BEACON_RESET_TSF, align 4
  %11 = or i32 %9, %10
  %12 = call i32 @OS_REG_WRITE(%struct.ath_hal* %7, i32 %8, i32 %11)
  ret void
}

declare dso_local i32 @OS_REG_READ(%struct.ath_hal*, i32) #1

declare dso_local i32 @OS_REG_WRITE(%struct.ath_hal*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
